# umi

./: README.md  package.json  pnpm-lock.yaml
docs/: index.html  style.css
server/: .gitignore  Cargo.toml  extractest.py  instpyt.bat
server/python_client/: README.md  setup.py
server/python_client/umiserver_python/: __init__.py  client.py
server/python_client/umiserver_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/src/: main.rs
server/src/apis/: mod.rs  script_api.rs  websocket_api.rs
server/src/engine/: engine.rs  mod.rs  workflow.rs
server/workflows/brief/: main.py  workflow.json
server/workflows/images_finder/: main.py  workflow.json
server/workflows/music-gpt/: main.py  workflow.json
server/workflows/one-file-project/: main.py  workflow-readme.md  workflow.json
server/workflows/simple_chat/: main.py  workflow-readme.md  workflow.json
src/: App.css  App.tsx  MainPage.tsx  context.tsx  i18n.tsx  main.tsx  react-i18next.tsx
src-tauri/: Cargo.toml  example.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chatbot.rs  lib.rs  main.rs  server_client.rs  state.rs  websocket_manager.rs
src/essential/: codeEditor.tsx  markdownRenderer.tsx  schemaPage.tsx  systemPage.tsx
src/essential/Chatbot/: chatbot.css  chatbotPage.tsx
src/essential/Docs/: docs.css  docsPage.tsx
src/essential/Editor/: editor.css  editorPage.tsx
src/essential/Header/: header.css  header.tsx
src/essential/StartPage/: LLMProviderPopup.tsx  addConnection.tsx  addProject.tsx  connectionHeader.tsx  (+3 more)
src/locales/: en.json  pl.json
(+3 files in other folders)
